Changes since version 1.1.0
---------------------------

- Added Ice::EvictorBase servant locator. This locator automatically
  maintains a cache of servants in LRU order.

- Fixed a number of incorrect property settings in the config files
  for the demos.

- Added new property: Ice.Trace.Slicing. When set to a value > 0,
  unknown exception and class types that are sliced emit a warning.

- Added destroyOnInterrupt() to the Application
  class. destroyOnInterrupt() is now the default behavior, because
  shutdownOnInterrupt() only shuts down the server side of an
  application, and therefore doesn't work with pure clients.

- ObjectAdapter::removeServantLocator() no longer exists.  The life
  cycle of servant locators that are registered with an object adapter
  ends when the adapter is destroyed.

- Changed Ice::ServantLocator::deactivate to be passed the category
  for which a servant locator is being deactivated.

- Added --noindex option to slice2docbook to suppress generation of
  index pages for pdf version of documentation.

- Changed the behavior of Freeze::Map::insert to match the insert
  behavior on associative containers in the C++ standard: if the
  element is already there, it is not updated.  Added Freeze::Map::put
  function, to insert or replace an element, like the old insert. This
  corresponds to the behavior of Berkeley DB's DB->put().

- Added saveObject() operation on Evictor, and savedObject() operation
  on PersistenceStrategy.  saveObject() saves a persistent object
  immediately. Once an operation has called saveObject(), the object
  is considered "clean": other updates by the same operation can only
  be reliably saved by another call to saveObject().

- Added a test to the Slice parser to complain if an operation on a
  local interface or class has an exception specification.

- Added a test to the property parsing code to print a warning on
  stderr if a property is not recognized. This prevents silly typos,