@@ -1,6 +1,10 @@
 Changes since version 1.1.0
 ---------------------------
 
+- Added Ice.MessageSizeMax property. This property controls the maximum
+  message size accepted by the Ice protocol in kiloBytes. The default value
+  is 1024 (1 MB).
+
 - Added Ice::EvictorBase servant locator. This locator automatically
   maintains a cache of servants in LRU order.
 
